5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1582_1332.log
== TEST (2019-03-26 01:27:45) 
-- CODE:
aresta = 5
area = 3/2(3.5**2)**1/2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2(3.5**2)**1/2
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 01:29:25) 
-- CODE:
aresta = 5
area = 3/2((3.5**2)**1/2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2((3.5**2)**1/2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 01:32:21) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*5**2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 01:34:40) 
-- CODE:
aresta = 5
area = 3/2*(3*5**2)**1/2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 01:35:28) 
-- CODE:
aresta = 5
area = 3/2*(3*5**2)**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.171022
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 01:36:26) 
-- CODE:
aresta = 5
area = 3/2*(3*5**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 01:36:37) 
-- CODE:
aresta = 5
area = 3/2*(3*5**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.1336
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 01:37:35) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*area**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*(3**0.5)*area**2
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 01:37:51) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*aresta**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 01:38:33) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 01:38:39) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.125707
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 01:39:38) 
-- CODE:
aresta = 5
area = 1.5*(3*aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 01:39:52) 
-- CODE:
aresta = 5
area = 1.5*(3*aresta**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.275102
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 01:41:00) 
-- CODE:
aresta = 5
area = 1.5*(3)**0.5*aresta**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 01:41:23) 
-- CODE:
aresta = 5
area = 1.5*(3)**0.5*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 01:41:43) 
-- CODE:
aresta = 5
area = 1.5*(3)**0.5*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.142205
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
